--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start-prod": "NODE_ENV=production node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
-    "lint": "eslint ./src",
-    "fix": "eslint ./src --fix"
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
